--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Apprecio Clon",
-    "short_name": "Apprecio Clon",
+    "name": "Apprecio Clone",
+    "short_name": "Apprecio Clone",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
