--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -49,7 +49,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.verygoodcore.apprecio_clon"
+        applicationId "com.example.verygoodcore.apprecio_clone"
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
@@ -79,17 +79,17 @@ android {
         production {
             dimension "default"
             applicationIdSuffix ""
-            manifestPlaceholders = [appName: "Apprecio Clon"]
+            manifestPlaceholders = [appName: "Apprecio Clone"]
         }
         staging {
             dimension "default"
             applicationIdSuffix ".stg"
-            manifestPlaceholders = [appName: "[STG] Apprecio Clon"]
+            manifestPlaceholders = [appName: "[STG] Apprecio Clone"]
         }
         development {
             dimension "default"
             applicationIdSuffix ".dev"
-            manifestPlaceholders = [appName: "[DEV] Apprecio Clon"]
+            manifestPlaceholders = [appName: "[DEV] Apprecio Clone"]
         }
     }
 
