--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: apprecio_clon
+name: apprecio_clone
 description: A Very Good Project created by Very Good CLI.
 version: 1.0.0+1
 publish_to: none
