--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.14)
-project(apprecio_clon LANGUAGES CXX)
+project(apprecio_clone LANGUAGES CXX)
 
-set(BINARY_NAME "apprecio_clon")
+set(BINARY_NAME "apprecio_clone")
 
 cmake_policy(SET CMP0063 NEW)
 
