--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,3 +11,8 @@ jobs:
     with:
       flutter_channel: stable
       flutter_version: 3.0.5
+    uses: VeryGoodOpenSource/very_good_coverage@v1
+    with:
+      path: './coverage/lcov.info'
+      min_coverage: 95
+      exclude: '**/*_observer.dart **/change.dart'
