--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,8 +9,8 @@ jobs:
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
-      coverage_excludes: "*.g.dart"
+      coverage_excludes: "*.g.dart" "l10n.dart"
       flutter_channel: stable
       flutter_version: 3.0.5
-      min_coverage: 95
+      min_coverage: 90
       test_recursion: true
